--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,21 @@
 <html>
 
 <head>
-  <title>Kirjautuminen</title>
+  <title>Koiratietokanta</title>
 </head>
 <h1>Koiratietokanta</h1>
 <body>
   {% if session.username %}
   <p>
-    Olet kirjautunut nimellä {{ session.username }}
+    Olet kirjautunut nimellä {{ session.username }} id-numerosi on {{ session.user_id}}
   </p>
+  {% endif %}
   <p>
+    <a href="/login">Kirjaudu sisään</a>
+    <a href="/register">Luo tunnus</a>
     <a href="/logout">Kirjaudu ulos</a>
   </p>
-  {% else %}
-  <form action="/login" method="post">
-    <p>
-      Tunnus: <br />
-      <input type="text" name="username" />
-    </p>
-    <p>
-      Salasana: <br />
-      <input type="password" name="password" />
-    </p>
-    <input type="submit" value="Kirjaudu" />
-  </form>
-  {% endif %}
-</body>
 
-</html>
+  <p>
+    <a href="/register_dog">Rekisteröi koira</a>
+    </p>
