--- a/templates/register.html
+++ b/templates/register.html
@@ -1,26 +1,37 @@
-<!DOCTYPE html>
 <html>
-
-<head>
-  <title>Rekisteröinti</title>
+  <head>
+    <title>Rekisteröinti</title>
 </head>
 
 <body>
+  <h1>Rekisteröinti</h1>
+    {% if error %}
+      <p style="color: red;">{{ error }}</p>
+    {% endif %}
+
+    {% if success %}
+      <p style="color: green;">{{ success }}</p>
+        {% endif %}
+
   <form action="/create" method="post">
     <p>
       Tunnus: <br />
       <input type="text" name="username" />
     </p>
-    <p>
-      Salasana: <br />
-      <input type="password" name="password1" />
-    </p>
-    <p>
-      Salasana uudestaan: <br />
+      <p>
+        Salasana: <br />
+          <input type="password" name="password1" />
+        </p>
+  <p>
+    Salasana uudestaan: <br />
       <input type="password" name="password2" />
-    </p>
-    <input type="submit" value="Luo tunnus" />
-  </form>
-</body>
+        </p>
+          <input type="submit" value="Luo tunnus" />
+      <p>
 
+</p>
+    </form>
+    <form action="/" method = "get">
+    <button type="submit">Takaisin etusivulle</button>
+  </body>
 </html>
