--- a/templates/register_dog.html
+++ b/templates/register_dog.html
@@ -6,23 +6,27 @@
 
 <body>
     <h1>Rekisteröi uusi koira</h1>
-    <form action="/create_register_dog" method="POST">
-        <label for="dogname">Koiran nimi:</label>
-        <input type="text" id="dogname" name="dogname" required><br><br>
+        <form action="/create_register_dog" method="POST">
+            <label for="dogname">Koiran nimi:</label>
+                <input type="text" id="dogname" name="dogname" required><br><br>
 
-        <label for="breed">Rotu:</label>
+    <label for="breed">Rotu:</label>
         <input type="text" id="breed" name="breed" required><br><br>
 
         <label for="age">Ikä:</label>
-<input type="number" id="age" name="age" min="0" required><br><br>
+            <input type="number" id="age" name="age" min="0" required><br><br>
 
-        <label for="gender">Sukupuoli:</label>
+    <label for="gender">Sukupuoli:</label>
         <select id="gender" name="gender" required>
             <option value="uros">Uros</option>
-            <option value="narttu">Narttu</option>
-        </select><br><br>
+                <option value="narttu">Narttu</option>
+            </select><br><br>
 
         <input type="submit" value="Rekisteröi koira">
-    </form>
-</body>
+           <form action="/" method = "get">
+
+        </form>
+        <form action="/" method = "get">
+    <button type="submit">Takaisin etusivulle</button>
+    </body>
 </html>
