Fixed register title

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
   <title>Kirjautuminen</title>
 </head>
 <body>
-  <h1>Rekisteröinti</h1>
+  <h1>Kirjaudu sisään</h1>
   {% if error %}
    <p style="color: red;">{{ error }}</p>
 {% endif %}
