Check user id ediit/remove

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
   {% endif %}
   
     <form action="/find_dog" method = "get">
-      <button type="submit">Etsi ilmoitus</button>
+      <button type="submit">Etsi rekisteröityjä koiria</button>
     <h2>Ilmoitukset</h2>
         <ul>
           {% for dog in dogs %}
