--- a/templates/register_dog.html
+++ b/templates/register_dog.html
@@ -8,13 +8,13 @@
     <h1>Rekisteröi uusi koira</h1>
         <form action="/create_register_dog" method="POST">
             <label for="dogname">Koiran nimi:</label>
-                <input type="text" id="dogname" name="dogname" required><br><br>
+                <input type="text" id="dogname" name="dogname" required maxlength = "50"><br><br>
 
     <label for="breed">Rotu:</label>
-        <input type="text" id="breed" name="breed" required><br><br>
+        <input type="text" id="breed" name="breed" required maxlength = "50"><br><br>
 
         <label for="age">Ikä:</label>
-            <input type="number" id="age" name="age" min="0" required><br><br>
+            <input type="number" id="age" name="age" min="0" max="35"required><br><br>
 
     <label for="gender">Sukupuoli:</label>
         <select id="gender" name="gender" required>
