--- a/templates/edit_dog.html
+++ b/templates/edit_dog.html
@@ -8,13 +8,13 @@
 
 <form action="/update_dog" method="POST">
     <label for="dogname">Koiran nimi:</label>
-        <input type="text" id="dogname" name="dogname" value="{{ dog.dogname }}" required><br><br>
+        <input type="text" id="dogname" name="dogname" value="{{ dog.dogname }}" required maxlength="50"><br><br>
 
 <label for="breed">Rotu:</label>
-    <input type="text" id="breed" name="breed" value="{{ dog.breed }}" required><br><br>
+    <input type="text" id="breed" name="breed" value="{{ dog.breed }}" required maxlength="50"><br><br>
 
 <label for="age">Ikä:</label>
-    <input type="number" id="age" name="age" value="{{ dog.age }}" min="0" required><br><br>
+    <input type="number" id="age" name="age" value="{{ dog.age }}" min="0" max="35" required><br><br>
 
 <label for="gender">Sukupuoli:</label>
     <select id="gender" name="gender" required>
