add users pages

--- a/templates/show_dog.html
+++ b/templates/show_dog.html
@@ -17,7 +17,7 @@
     <p>Rotu: {{ dog.breed }}</p>
     <p>Ikä: {{ dog.age }}</p>
     <p>Sukupuoli: {{ dog.gender }}</p>
-    <p>Ilmoittaja: {{dog.user_name}}</p>
+    <p>Ilmoittaja: <a href="/user/{{ dog.user_id }}">{{ dog.user_name }}</a></p>
 
 <form action="/" method = "GET">
     <button type="submit">Takaisin etusivulle</button>
