Add classes to dogs

--- a/templates/register_dog.html
+++ b/templates/register_dog.html
@@ -21,7 +21,41 @@
             <option value="uros">Uros</option>
                 <option value="narttu">Narttu</option>
             </select><br><br>
+                        </p>
+                        <p>
+                Minkä kokoinen koira on? </br>
+                <select name="size">
+                    <option value="Valitse">Valitse</option>
+                    <option value="Pieni">Pieni</option>
+                    <option value="Keskikokoinen">Keskikokoinen</option>
+                    <option value="Suuri">Suuri</option>
+                    </select>
 
+            </p>
+                Koiran luonne </br>
+                <select name="temperament">
+                    <option value="Valitse">Valitse</option>
+                    <option value="Käyttäytyy nätisti">Käyttäytyy nätisti</option>
+                    <option value="Käyttäytyy nätisti, mutta joitain ongelmia">Käyttäytyy nätisti, mutta joitain ongelmia</option>
+                    <option value="Remmirähisiä">Remmirähisiä</option>
+                    </select>
+
+            </p>
+            <p>
+                Mihin aktiviteettiin etsit seuraa? </br>
+                <select name="activity">
+                    <option value="Valitse">Valitse</option>
+                    <option value="Näyttely">Näyttely</option>
+                    <option value="Koirapuisto">Koirapuisto</option>
+                    <option value="Ulkoiluun">Ulkoiluun</option>
+                    <option value="Agility">Agility</option>
+                    <option value="Kisoihin">Kisoihin</option>
+                    <option value="Etsin ulkoiluttajaa">Etsin ulkoiluttajaa</option>
+                    </select>
+
+
+<p>
+</p>
         <input type="submit" value="Rekisteröi koira">
            <form action="/" method = "get">
 
