--- a/templates/edit_dog.html
+++ b/templates/edit_dog.html
@@ -1,33 +1,56 @@
 <html>
-
 <head>
-  <title>Muokkaa ilmoitusta</title>
+    <title>Muokkaa ilmoitusta</title>
 </head>
 <body>
 <h1>Muokkaa ilmoitusta</h1>
 
 <form action="/update_dog" method="POST">
     <label for="dogname">Koiran nimi:</label>
-        <input type="text" id="dogname" name="dogname" value="{{ dog.dogname }}" required maxlength="50"><br><br>
+    <input type="text" id="dogname" name="dogname" value="{{ dog.dogname }}" required maxlength="50"><br><br>
 
-<label for="breed">Rotu:</label>
+    <label for="breed">Rotu:</label>
     <input type="text" id="breed" name="breed" value="{{ dog.breed }}" required maxlength="50"><br><br>
 
-<label for="age">Ikä:</label>
+    <label for="age">Ikä:</label>
     <input type="number" id="age" name="age" value="{{ dog.age }}" min="0" max="35" required><br><br>
 
-<label for="gender">Sukupuoli:</label>
+    <label for="gender">Sukupuoli:</label>
     <select id="gender" name="gender" required>
         <option value="uros" {% if dog.gender == 'uros' %}selected{% endif %}>Uros</option>
-            <option value="narttu" {% if dog.gender == 'narttu' %}selected{% endif %}>Narttu</option>
-</select><br><br>
+        <option value="narttu" {% if dog.gender == 'narttu' %}selected{% endif %}>Narttu</option>
+    </select><br><br>
+
+    <label for="size">Koko:</label>
+    <select id="size" name="size" required>
+        <option value="">(valitse)</option>
+        {% for size in sizes %}
+            <option value="{{ size }}" {% if size == dog.size %}selected{% endif %}>{{ size }}</option>
+        {% endfor %}
+    </select><br><br>
+
+    <label for="temperament">Luonteenpiirre:</label>
+    <select id="temperament" name="temperament" required>
+        <option value="">(valitse)</option>
+        {% for temperament in temperaments %}
+            <option value="{{ temperament }}" {% if temperament == dog.temperament %}selected{% endif %}>{{ temperament }}</option>
+        {% endfor %}
+    </select><br><br>
+
+    <label for="activity">Aktiviteetti:</label>
+    <select id="activity" name="activity" required>
+        <option value="">(valitse)</option>
+        {% for activity in activities %}
+            <option value="{{ activity }}" {% if activity == dog.activity %}selected{% endif %}>{{ activity }}</option>
+        {% endfor %}
+    </select><br><br>
+
     <input type="hidden" name="dog_id" value="{{ dog.dog_id }}">
-        <input type="submit" value="Päivitä tiedot">
+    <input type="submit" value="Päivitä tiedot"><br><br>
+</form>
 
-<form action="/" method = "get">
+<form action="/" method="get">
     <button type="submit">Takaisin etusivulle</button>
-
-
-        </form>
-    </body>
+</form>
+</body>
 </html>
