--- a/templates/show_dog.html
+++ b/templates/show_dog.html
@@ -37,10 +37,31 @@
     {% endfor %}
   </ul>
 </p>
+{% endif%}
+{% if questions %}
+    <h2>Kysymykset:</h2>
+    <ul>
+        {% for question in questions %}
+            <li>{{ question.textarea }} <a href="/user/{{ question.user_id }}">{{ question.username }}</a></li>
+        {% endfor %}
+    </ul>
+{% else %}
+    <p>Ei kysymyksiä.</p>
 {% endif %}
 
-    <p>
-<form action="/" method = "GET">
+{% if session.username %}
+<h2>Kysyttävää koirasta {{ dog.dogname }}?</h2>
+    <p><small>Kiinnostaako jokin aktiviteetti {{dog.dogname}}n ja {{dog.user_name}}n kanssa? Tai onko sinulla jotain kysyttävää?
+      Kysy lisää tässä!</small></p>
+<form action="/create_questions" method="post">
+    <textarea name="textarea" rows="10" cols="50" required></textarea>
+    <input type="hidden" name="dog_id" value="{{ dog.dog_id }}">
+    <br></br><input type="submit" value="Jätä kysymys">
+</form>
+<input type="hidden" name="dog_id" value="{{dog.id}}">
+<p>
+  {% endif %}
+  <form method="GET" action="{{url_for('index')}}">
     <button type="submit">Takaisin etusivulle</button>
 </p>
       </form>
