--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
       <p style="color: green;">{{ success }}</p>
         {% endif %}
 
-  <form action="/create" method="post">
+  <form action="/create" method="POST">
     <p>
       Tunnus: <br />
       <input type="text" name="username" />
@@ -31,7 +31,7 @@
 
 </p>
     </form>
-    <form action="/" method = "get">
+    <form action="/" method = "GET">
     <button type="submit">Takaisin etusivulle</button>
   </body>
 </html>
