--- a/templates/remove_dog.html
+++ b/templates/remove_dog.html
@@ -9,8 +9,8 @@
     <form method="POST">
         <input type="submit" value="Poista koira">
     </form>
-    <form method="GET" action="{{url_for('index')}}">
+<form method="GET" action="{{ url_for('get_dog', dog_id=dog.dog_id) }}">
     <input type="submit" value="Peruuta">
- </form>
+</form>
 </body>
 </html>
