Add feature for removing images

--- a/templates/find_dog.html
+++ b/templates/find_dog.html
@@ -11,7 +11,7 @@
         <p>
             <small>Hakusanoja voivat olla koiran nimi, ikä, rotu, sukupuoli tai ilmoittajan nimi</small>
         </p>
-        <input type="submit" value="Lähetä">
+        <input type="submit" value="Hae">
     </form>
     <form action="/" method="get">
         <button type="submit">Takaisin etusivulle</button>
