--- a/templates/images.html
+++ b/templates/images.html
@@ -8,6 +8,17 @@
     <p>
         Ilmoituksessa on {{ images| count }} kuvaa.
     </p>
+    <form action="/remove_images" method="post">
+    {% for image in images %}
+            <input type="checkbox" name="image_id" value="{{image.id}}">
+    <img src="/image/{{image.id}}"/>
+    </br>
+    {% endfor %}
+        <input type="hidden" name="dog_id" value="{{ dog.dog_id }}">
+        <p>
+    <input type="submit" value="Poista valitut" />
+        </p>
+    </form>
     <h2> Lisää uusi kuva</h2>
 <form action="/add_image" method="post" enctype="multipart/form-data">
     <p>
