--- a/templates/find_dog.html
+++ b/templates/find_dog.html
@@ -1,9 +1,7 @@
-<html>
-<head>
-    <title>Etsi koira</title>
-</head>
-<body>
-    <h1>Etsi koira</h1>
+{% extends "layout.html" %}
+  {% block title %}Koiratietokanta{% endblock %}
+{% block content %}
+<h2>Etsi koira</h2>
     <form action="/find_dog" method="GET">
         <p>
             Hakusana: <input type="text" name="query" value="{{queston_text }}">
@@ -11,12 +9,8 @@
         <p>
             <small>Hakusanoja voivat olla koiran nimi, ikä, rotu, sukupuoli tai ilmoittajan nimi</small>
         </p>
-        <input type="submit" value="Hae">
+        <input type="submit" value="Lähetä">
     </form>
-    <form action="/" method="get">
-        <button type="submit">Takaisin etusivulle</button>
-    </form>
-
     {% if query %}
         <h2>Haullasi löytyi nämä ilmoitukset</h2>
         <ul>
@@ -29,5 +23,4 @@
     {% else %}
         <p>Ei hakutuloksia.</p>
     {% endif %}
-</body>
-</html>
+{% endblock%}
