--- a/templates/show_dog.html
+++ b/templates/show_dog.html
@@ -44,7 +44,7 @@
         {% endfor %}
     </ul>
 {% else %}
-    <strong>Ei vielä yhtään jätettyä kysymystä.</strong>
+    <strong>Ei vielä yhtään jätettyjä kysymyksiä.</strong>
 {% endif %}
 
 {% if session.username %}
