add back button

--- a/templates/register_dog.html
+++ b/templates/register_dog.html
@@ -45,6 +45,7 @@
             </select><br><br>
     <input type="submit" value="Rekisteröi koira">
     </form>
-
+<form action="/" method="GET">
+    <button type="submit">Peruuta</button>
         </form>
 {% endblock %}
