--- a/templates/images.html
+++ b/templates/images.html
@@ -1,23 +1,21 @@
 {% extends "layout.html" %}
-{% block title %}Lisää uusi kuva{% endblock %}
+{% block title %}{{ dog.dogname }} kuvat{% endblock %}
 {% block content %}
-    <h2>{{ dog.dogname }} kuvat</h2>
-    <p>
-        Ilmoituksessa on {{ images| count }} kuvaa.
-    </p>
-    <form action="/remove_images" method="post">
-    {% for image in images %}
-            <input type="checkbox" name="image_id" value="{{image.id}}">
-    <img src="/image/{{image.id}}"/>
-    </br>
-    {% endfor %}
-        <input type="hidden" name="dog_id" value="{{ dog.dog_id }}">
-        <p>
-    <input type="submit" value="Poista valitut" />
-        </p>
-    </form>
-    <h4> Lisää uusi kuva</h4>
+<h2>{{ dog.dogname }} kuvat</h2>
 
+<p>Ilmoituksessa on {{ images | count }} kuvaa.</p>
+<form action="/remove_images" method="post">
+    {% for image in images %}
+        <input type="checkbox" name="image_id" value="{{ image.id }}">
+        <img src="/image/{{ image.id }}" alt="Kuva koirasta"/><br/>
+    {% endfor %}
+    <input type="hidden" name="dog_id" value="{{ dog.dog_id }}">
+    <p>
+        <input type="submit" value="Poista valitut" />
+    </p>
+</form>
+
+<h4>Lisää uusi kuva</h4>
 <form action="/add_image" method="post" enctype="multipart/form-data">
     <p>
         Kuva: <input type="file" name="image" accept=".png" required /><br/>
@@ -25,7 +23,9 @@
     </p>
     <input type="hidden" name="dog_id" value="{{ dog.dog_id }}">
     <input type="submit" value="Lähetä" />
-</form><form method="GET" action="{{ url_for('get_dog', dog_id=dog.dog_id) }}">
+</form>
+
+<form method="GET" action="{{ url_for('get_dog', dog_id=dog.dog_id) }}">
     <input type="submit" value="Peruuta">
 </form>
 {% endblock %}
