--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,6 +33,11 @@
     </form>
   {% endif %}
    </p>
+  {% for message in get_flashed_messages() %}
+  <div class="info">
+    <b>{{ message }}</b>
+  </div>
+  {% endfor %}
     {% block content %}{% endblock %}
 </body>
 
