--- a/templates/show_dog.html
+++ b/templates/show_dog.html
@@ -40,7 +40,7 @@
     <h2>Kysymykset:</h2>
     <ul>
         {% for question in questions %}
-            <li>{{ question.textarea }} <a href="/user/{{ question.user_id }}">{{ question.username }}</a></li>
+            <li>{{ question.textarea | show_lines }} <a href="/user/{{ question.user_id }}">{{ question.username }}</a></li><br/>
         {% endfor %}
     </ul>
 {% else %}
@@ -49,7 +49,7 @@
 
 {% if session.username %}
 <h2>Kysyttävää koirasta {{ dog.dogname }}?</h2>
-    <p><small>Kiinnostaako jokin aktiviteetti {{dog.dogname}}n ja {{dog.user_name}}n kanssa? Tai onko sinulla jotain kysyttävää?
+    <p><small>Kiinnostaako jokin aktiviteetti {{dog.dogname}}n ja {{dog.username}}n kanssa? Tai onko sinulla jotain kysyttävää?
       Kysy lisää tässä!</small></p>
 <form action="/create_questions" method="post">
     <textarea name="textarea" rows="10" cols="50" required></textarea>
