--- a/templates/images.html
+++ b/templates/images.html
@@ -19,7 +19,7 @@
 <h4>Lisää uusi kuva</h4>
 <form action="/add_image" method="post" enctype="multipart/form-data">
     <p>
-        Kuva: <input type="file" name="image" accept=".png" required /><br/>
+        <label for="image">Kuva:</label>
         <small><i>Voit lisätä ainoastaan .png - tiedostoja.</i></small>
     </p>
     <input type="hidden" name="dog_id" value="{{ dog.dog_id }}">
